# llmdh

./: .gitignore  README.md  pyproject.toml  requirements.txt
llmdh/: __init__.py  imports.py  llmdh.py  llms.py  prosody_llms.py  story_llms.py  story_llms1.py  utils.py
notebooks/: dev_chadwyck.ipynb  dev_claude.ipynb  dev_crawl.ipynb  dev_llms.ipynb  dev_llms2.ipynb  dev_logprobs.ipynb  dev_logprobs_rhyme.ipynb  dev_poem_classify.ipynb  dev_poem_embeddings.ipynb  dev_rhyme.ipynb  dev_rhyme_cmp.ipynb  dev_rhyme_cmp_analysis.ipynb  dev_rhyme_cmp_analysis2.ipynb  dev_rhyme_cmp_analysis3.ipynb  dev_rhyme_new.ipynb  dev_rhyme_new_analysis.ipynb  dev_rhyme_new_analysis2.ipynb  dev_sonnet.ipynb  dev_sonnet2.ipynb  dev_story.ipynb  dev_story2.ipynb  dev_story2_viz.ipynb  dev_torch.ipynb  newstorytest.ipynb  noveltest.ipynb  noveltest2.ipynb  noveltest2_analysis.ipynb  noveltest3.ipynb  noveltest_chars.ipynb  noveltest_chars_analysis.ipynb  shortstory.ipynb  test_screenplay.txt
